--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  generate:
     runs-on: ubuntu-latest
     steps:
       - uses: Platane/snk@v3
@@ -14,6 +14,7 @@ jobs:
           github_user_name: JefferssonAllves
           outputs: |
             dist/github-contribution-grid-snake.svg
+
       - uses: crazy-max/ghaction-github-pages@v4
         with:
           target_branch: output
