--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -5,6 +5,9 @@ on:
     - cron: "0 0 * * *"
   workflow_dispatch:
 
+permissions:
+  contents: write   # <<< ISSO resolve o erro 128
+
 jobs:
   generate:
     runs-on: ubuntu-latest
