--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: write   # <<< ISSO resolve o erro 128
+  contents: write  
 
 jobs:
   generate:
