--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -16,7 +16,8 @@ jobs:
         with:
           github_user_name: JefferssonAllves
           outputs: |
-            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+
 
       - uses: crazy-max/ghaction-github-pages@v4
         with:
