--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -16,6 +16,7 @@ jobs:
         with:
           github_user_name: JefferssonAllves
           outputs: |
+            dist/github-contribution-grid-snake.svg?palette=github-light
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
 
 
