--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -16,8 +16,7 @@ jobs:
         with:
           github_user_name: JefferssonAllves
           outputs: |
-            dist/github-contribution-grid-snake.svg?palette=github-light
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark-high-contrast
 
 
       - uses: crazy-max/ghaction-github-pages@v4
